--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,58 @@
-.books-list {
-    width: 200px;
+.books-list-item {
+    display: flex;
+    margin: 15px 0;
+}
+
+.books-list-item .book-cover {
+    flex-shrink: 0;
+    width: 140px;
+    margin-right: 30px;
+}
+
+.books-list-item .book-cover img {
+    width: 100%;
+}
+
+.books-list-item .book-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 10px;
+    align-items: flex-start;
+}
+
+.books-list-item .book-details .add-to-cart {
+    margin-top: 10px;
+}
+
+.books-list-item .book-details .book-title {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.HomePage {
+    padding: 20px 10px;
+}
+
+.btn-style {
+    width: 100px;
+    margin-right: 10px;
+}
+
+.btn-style:last-child {
+    margin-right: 0;
+}
+
+.table-style td,
+.table-style th {
+    vertical-align: middle;
+}
+
+.table-style td:last-child {
+    width: 25%;
+}
+
+.btn-delete {
+    border: 2px solid #000;
+    color: #000;
 }
