--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -30,10 +30,6 @@
     font-weight: bold;
 }
 
-.HomePage {
-    padding: 20px 10px;
-}
-
 .btn-style {
     width: 100px;
     margin-right: 10px;
@@ -52,7 +48,20 @@
     width: 25%;
 }
 
-.btn-delete {
-    border: 2px solid #000;
-    color: #000;
+header {
+    width: 100%;
+    background-color: #1a1a1a;
+}
+
+.shop-header {
+    margin-bottom: 10px;
+}
+
+.cart-title {
+    color: #fff;
+}
+
+.cart-title:hover {
+    color: #fff;
+    opacity: .8;
 }
